--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Todo List APP test</title>
+        <title>Sam ToDo List App</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -89,7 +89,7 @@
     </head>
 
     <body>
-        <h1>Hello GNA University, Write your Goals Below</h1>
+        <h1>Sam's Goals</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
